update to font lesson

--- a/css_intermediate/1_fonts.html
+++ b/css_intermediate/1_fonts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="1_fonts.css">
     <title>Fonts</title>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Font Demo Page</h1>
@@ -17,7 +18,22 @@
         Rump ground round pork chop bacon, kevin ribeye beef ribs swine ball tip picanha jowl strip
         steak capicola pork landjaeger.
     </p>
-    <p>
+    <p id="p2">
+        Tongue chislic sirloin brisket.
+        Beef ribs venison doner rump pancetta kielbasa.
+        Jowl ham pork loin, burgdoggen cow short ribs picanha pork belly tail sausage t-bone strip steak beef.
+        Hamburger doner picanha, meatloaf pork loin buffalo tail jerky kevin pig tongue capicola bacon swine.
+        Andouille short loin swine pork loin tongue, drumstick landjaeger
+        shankle kevin ball tip pastrami turkey boudin porchetta sirloin.
+    </p>
+    <p id="p3">
+        Bacon ipsum dolor amet boudin chicken sausage brisket ball tip filet mignon burgdoggen ground round short
+        loin short ribs beef ribs chislic cow capicola. Boudin jowl andouille tenderloin, sirloin biltong drumstick 
+        kielbasa burgdoggen frankfurter buffalo ground round porchetta turducken. Tri-tip pork chop andouille,
+        swine kevin pastrami bacon pancetta t-bone. Doner buffalo bacon tail landjaeger burgdoggen. Rump ground 
+        round pork chop bacon, kevin ribeye beef ribs swine ball tip picanha jowl strip steak capicola pork landjaeger.
+    </p>
+    <p id="p4">
         Tongue chislic sirloin brisket.
         Beef ribs venison doner rump pancetta kielbasa.
         Jowl ham pork loin, burgdoggen cow short ribs picanha pork belly tail sausage t-bone strip steak beef.
