--- a/css_intermediate/bootstrap3/bs_basics/basics.html
+++ b/css_intermediate/bootstrap3/bs_basics/basics.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="bootstrap.css">
+    <title>BS3 start</title>
 </head>
 <body>
-    
+    <h1>Boostrap3 basics</h1>
+    <button class="btn btn-success btn-lg">CLICK ME!</button>
+    <a href="http://www.google.com" class="btn btn-danger btn-lg">LINK TO GOOGLE</a>
 </body>
 </html>
