css transition and anim lessons & gangnam style

--- a/css_intermediate/blogcss_from_scratch/blog.html
+++ b/css_intermediate/blogcss_from_scratch/blog.html
@@ -7,43 +7,43 @@
     <title>Blog</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container1">
         <p class="date">November 23 2015</p>
         <h1>This is my first article</h1>
-        <p class="quote">
+        <p class="quote test">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut molestie justo, eget porta elit.
             Nullam in massa at augue dapibus malesuada. Aliquam vel felis mattis, imperdiet urna et, hendrerit metus.
             Integer eu mauris quis metus pharetra sagittis id quis magna. Nam consectetur venenatis justo id accumsan.
             
         </p>
-        <p>
+        <p class="test">
             Fusce id mauris a lorem consectetur venenatis.
             Nulla luctus enim ut urna sodales, sit amet rhoncus lacus ultricies. Mauris at odio odio.
             Aliquam erat volutpat. Cras sapien diam, volutpat volutpat ante nec, vehicula commodo lectus.
             Etiam lobortis sed ipsum et efficitur. Nulla quis mi a nibh porttitor dapibus sit amet vel metus.
         </p>
-        <p>
+        <p class="test">
             Praesent pellentesque libero in placerat sollicitudin. Cras diam lacus, malesuada at ligula porta,
             hendrerit dignissim elit. Phasellus non elit at ex tempus accumsan. Vestibulum eget lectus lectus.
             Pellentesque a tortor ac leo aliquam sodales vel eget dolor. Curabitur quis elit ut dui placerat
             faucibus id non justo.
         </p>
         <hr>
-        <p class="date">November 24 2015</p>
+        <p class="date test">November 24 2015</p>
         <h1>This is my second article</h1>
-        <p class="quote">
+        <p class="quote test">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut molestie justo, eget porta elit.
             Nullam in massa at augue dapibus malesuada. Aliquam vel felis mattis, imperdiet urna et, hendrerit metus.
             Integer eu mauris quis metus pharetra sagittis id quis magna. Nam consectetur venenatis justo id accumsan.
             
         </p>
-        <p>
+        <p class="test">
             Fusce id mauris a lorem consectetur venenatis.
             Nulla luctus enim ut urna sodales, sit amet rhoncus lacus ultricies. Mauris at odio odio.
             Aliquam erat volutpat. Cras sapien diam, volutpat volutpat ante nec, vehicula commodo lectus.
             Etiam lobortis sed ipsum et efficitur. Nulla quis mi a nibh porttitor dapibus sit amet vel metus.
         </p>
-        <p>
+        <p class="test">
             Praesent pellentesque libero in placerat sollicitudin. Cras diam lacus, malesuada at ligula porta,
             hendrerit dignissim elit. Phasellus non elit at ex tempus accumsan. Vestibulum eget lectus lectus.
             Pellentesque a tortor ac leo aliquam sodales vel eget dolor. Curabitur quis elit ut dui placerat
